[package]
name = "reconciler"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Simple and composable async event listener"
readme = "README.md"
documentation = "https://docs.rs/reconciler"
repository = "https://github.com/verdiwm/reconciler"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
futures-util = { version = "0.3.30", default-features = false, features = ["sink"] }
pin-project-lite = "0.2.14"
tokio = { version = "1.38.1", features = ["rt", "sync"] }
tokio-stream = { version = "0.1.15", default-features = false }
tokio-util = "0.7.11"
